--- a/NEW.html
+++ b/NEW.html
@@ -1,11 +1,14 @@
-<body style="background-color:white;">
-	<p style="text-align:center;">
-		<img style="align:right" src="https://raw.githubusercontent.com/JAYED-HOSEN/WEBSITE-IMG/main/Picsart_23-08-06_22-36-57-353.png"width="200px" />
-		<pre>
-			                         <b>293k</b> follwar   <b>0 </b>following
+<html>
+	<body style="background-color:white;">
+		<p style="text-align:center;">
+			<img style="align:right" src="https://raw.githubusercontent.com/JAYED-HOSEN/WEBSITE-IMG/main/Picsart_23-08-06_22-36-57-353.png"width="200px" />
+			<pre>
+					                         <b>293k</b> follwar   <b>0 </b>following
+				
 		<h2 style="text-align:center;">MD TAHMID AHMED</h2>
 		<hr style="color:black"/>
 		
 	</p>
-	
-</body>
+			
+	</body>
+</html>
